fixe overflow

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body{
     border: 7px solid gray;
     border-radius: 5px;
     background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    height: 90vh;
+    /* height: 90vh; */
     margin-top: 2.5em;
     font-family: 'Roboto', sans-serif;
 }
