--- a/src/pages/loading/loading.scss
+++ b/src/pages/loading/loading.scss
@@ -1,6 +1,6 @@
 .container{
     text-align: center;
-    // height: 100vh;
+    height: 90vh;
     margin-top: 1em;
     overflow: hidden;
 
